# SciTeeXMeasurementManager

./: build.gradle  settings.gradle
aRSciTeeXObjects/: build.gradle
aRSciTeeXObjects/src/main/: AndroidManifest.xml
aRSciTeeXObjects/src/main/java/com/sciteex/ssip/ar/: SimpleNativeRenderer.java
aRSciTeeXObjects/src/main/jni/: ARWrapperNative.cpp  Android.mk  Application.mk
aRSciTeeXObjects/src/main/libs/armeabi-v7a/objs/ARSciTeeXObjects/: ARWrapperNativeCarsExample.o.d
aRSciTeeXObjects/src/main/libs/armeabi/objs/ARWrapperNativeCarsExample/: ARWrapperNativeCarsExample.o.d
aRSciTeeXObjects/src/main/libs/x86_64/objs/ARWrapperNativeCarsExample/: ARWrapperNativeCarsExample.o.d
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/armeabi-v7a/objs/ARWrapperNativeCarsExample/: ARWrapperNativeCarsExample.o.d
app/src/androidTest/java/com/sciteex/ssip/sciteexmeasurementmanager/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/Data/: sciteex.patt
app/src/main/assets/Data/models/: SciTeeX_logo.mtl
app/src/main/assets/Data/models/Ferrari_Modena_Spider/: Thumbs.db
app/src/main/cpp/: ARWrapperSciTeeXObjects.cpp  opcuaclient.c
app/src/main/java/com/sciteex/ssip/sciteexmeasurementmanager/: AppCompatPreferenceActivity.java  BarcodeScanner.java  DisplayColorChanger.java  FadingImageView.java  FileAdapter.java  FileBrowser.java  IntentIntegrator.java  IntentResult.java  Item.java  JNIOpcUaClient.java  LoginActivity.java  MeasureBounds.java  MeasurementAdditionalDataReader.java  MeasurementExecuter.java  MeasurementManager.java  MovingPopupWindow.java  OpcUaType.java  OpcUaVariable.java  SQLQueryObject.java  SSIPDatabaseConnection.java  SciTeeXAR.java  SettingsActivity.java
app/src/main/java/com/sciteex/ssip/sciteexmeasurementmanager/services/: ButtonActionService.java  DatabaseService.java  EventFilterService.java  OpcUaService.java  UserInactiveService.java
app/src/main/jni/: ARWrapperSciTeeXObjects.cpp  Android.mk  Application.mk
app/src/main/jniLibs/x86/objs/ARSciTeeXObjects/: ARWrapperNativeCarsExample.o.d
app/src/main/jniLibs/x86_64/objs/ARSciTeeXObjects/: ARWrapperNativeCarsExample.o.d
app/src/main/res/drawable/: elcometer_button.xml  elcometer_screen.xml  measure_box.xml  splash.xml  text_edit_border.xml
app/src/main/res/drawable-hdpi/: Thumbs.db
app/src/main/res/drawable-mdpi/: Thumbs.db
app/src/main/res/drawable-xhdpi/: Thumbs.db
app/src/main/res/drawable-xxhdpi/: Thumbs.db
app/src/main/res/drawable-xxxhdpi/: Thumbs.db
app/src/main/res/layout/: activity_barcode_scanner.xml  activity_login.xml  activity_measurement_manager.xml  activity_sciteex_ar.xml  add_query_layout.xml  app_bar_measurement_manager.xml  content_barcode_scanner.xml  content_measurement_manager.xml  database_query_menu.xml  file_browser.xml  movable_popup.xml  nav_header_measurement_manager.xml  opc_ua_variable_modifier.xml  query_list_layout.xml  query_row.xml
app/src/main/res/menu/: activity_measurement_manager_drawer.xml  slide_context_menu.xml
app/src/main/res/mipmap-hdpi/: Thumbs.db
app/src/main/res/mipmap-mdpi/: Thumbs.db
app/src/main/res/mipmap-xhdpi/: Thumbs.db
app/src/main/res/mipmap-xxhdpi/: Thumbs.db
app/src/main/res/mipmap-xxxhdpi/: Thumbs.db
app/src/main/res/values/: colors.xml  database.xml  default_resources.xml  ids.xml  opcua.xml  strings.xml  styles.xml
app/src/main/res/xml/: pref_data_sync.xml  pref_general.xml  pref_headers.xml
app/src/test/java/com/sciteex/ssip/sciteexmeasurementmanager/: ExampleUnitTest.java  OpcUaClientNativeTest.java
gradle/wrapper/: gradle-wrapper.properties
sqljdbc4-3.0/: build.gradle
stllib/: build.gradle
stllib/src/androidTest/java/com/sciteex/ssip/stllibrary/: ExampleInstrumentedTest.java
stllib/src/main/: AndroidManifest.xml
(+4 files in other folders)
